# RNNP

./: .gitignore  CMakeLists.txt  HOWTO.txt  global.cpp  global.h  main_grid_search_Cerb.cpp  main_grid_search_G.cpp  main_grid_search_Gigat.cpp  main_grid_search_Long.cpp  main_noMPI.cpp  mpd.nodes  qsub_script_mpi_cerb.sub  qsub_script_mpi_gigat.sub  qsub_script_mpi_long.sub  utilities.cpp  utilities.h
ActivationFunctions/: AbstractActivationFunction.cpp  AbstractActivationFunction.h  ExpLU.cpp  ExpLU.h  LeakyReLU.cpp  LeakyReLU.h  Linear.cpp  Linear.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  Softsign.cpp  Softsign.h  Swish.cpp  Swish.h  Tanh.cpp  Tanh.h  output_cerbero.txt
DataStructures/: AlgebraicOperations.cpp  AlgebraicOperations.h  CircularBuffer.h  Dataset.cpp  Dataset.h  Matrix.cpp  Matrix.h  VectorClass.cpp  VectorClass.h
GradientAlgorithms/: AbstractGradientAlgo.cpp  AbstractGradientAlgo.h  BPTT.cpp  BPTT.h  RTRL.cpp  RTRL.h  TRRL.cpp  TRRL.h
Layers/: FirstLayer.cpp  FirstLayer.h  SecondLayer.h
Legacy/: main_grid_search_GLong.cpp  main_grid_search_GLong_old.cpp  main_grid_search_GMLE.cpp  main_grid_search_GOLD.cpp  main_old.cpp
Losses/: AbstractLossFunction.cpp  AbstractLossFunction.h  GaussianCRPS.cpp  GaussianCRPS.h  GaussianCRPSLambda.cpp  GaussianCRPSLambda.h  GaussianCRPSTrivial.cpp  GaussianCRPSTrivial.h  GaussianWinkler.cpp  GaussianWinkler.h  GaussianWinklerTrivial.cpp  GaussianWinklerTrivial.h  LogLikelihood.cpp  LogLikelihood.h  MSE.cpp  MSE.h
Metrics/: AbstractMetric.cpp  AbstractMetric.h  MSE_metric.cpp  MSE_metric.h
Models/: LinearModel.cpp  LinearModel.h  RnnModel.cpp  RnnModel.h  RnnModelCPP.cpp
OutFiles/: training_stats.csv
Solvers/: AbstractSolver.cpp  AbstractSolver.h  Adam.cpp  Adam.h  Nadam.cpp  Nadam.h
